<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:layout_height="match_parent"
        tools:context=".ui.splash.SplashActivity">


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:visibility="gone"
                  android:layout_centerInParent="true"
                  android:id="@+id/ll_layout">


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="@dimen/sp34"
                  android:id="@+id/tv_name"
                  android:textColor="@android:color/white"
                  android:text="@string/app_name"
                  app:fontFamily="@font/poppins_semibold"/>

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"

                   android:src="@drawable/ic_fame"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/white"
                  android:textSize="@dimen/sp18"
                  android:gravity="center"
                  android:layout_margin="@dimen/dp10"
                  android:text="@string/famous_logo"
                  app:fontFamily="@font/poppins_medium"/>

    </LinearLayout>

    <Button android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:text="@string/proceed"
            android:textSize="18sp"
            android:id="@+id/btn_procced"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/colorAccent"
            android:background="@android:color/white"
            android:layout_alignParentBottom="true"/>

</RelativeLayout>