<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable name="viewModel"
                  type="com.example.luckyface.ui.auth.viewmodel.AuthViewModel"/>
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".ui.auth.views.EmailFragment">


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:id="@+id/ll_layout"
                      android:layout_alignParentBottom="true"
                      android:orientation="vertical">


            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="@dimen/sp16"
                      android:id="@+id/tv_instruction"
                      android:layout_marginStart="@dimen/dp15"
                      android:textColor="@android:color/black"
                      android:layout_marginBottom="@dimen/dp20"
                      android:text="@string/please_enter_your_password_below"
                      android:fontFamily="serif"/>


            <EditText android:layout_width="match_parent"
                      android:id="@+id/et_password"
                      android:text="@={viewModel.password}"
                      android:layout_height="@dimen/dp40"
                      android:background="@drawable/black_stroke_background"
                      android:layout_marginStart="@dimen/dp120"
                      android:layout_marginEnd="@dimen/dp10"
                      android:paddingStart="@dimen/dp20"
                      android:paddingEnd="@dimen/dp20"
                      android:textSize="@dimen/sp14"
                      android:maxLines="1"
                      android:inputType="textPassword"
                      android:hint="@string/enter_password"
                      android:layout_marginBottom="@dimen/dp10"
            />


            <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="@dimen/dp85"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_gravity="end"
                    android:onClick="@{viewModel::submitLoginButtonClicked}"
                    android:textSize="@dimen/sp16"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@android:color/white"
                    android:background="@drawable/btn_selector"
                    android:layout_marginTop="@dimen/dp10" android:layout_marginStart="@dimen/dp10"
                    android:layout_marginEnd="@dimen/dp10" android:layout_marginBottom="@dimen/dp10"/>
        </LinearLayout>
        <ProgressBar android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
                     android:layout_centerInParent="true"
                     android:id="@+id/progress_bar"/>
    </RelativeLayout>
</layout>